--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/plugins/autoloader/prism-autoloader.min.js"></script>
 
     <!-- Application Scripts -->
+    <script src="js/tooltip-manager.js"></script>
     <script src="js/app.js"></script>
 </body>
 </html>
